# monocle

./: monocle.cabal  stack.yaml
app/: Main.hs
src/: Monocle.hs
